--- a/src/type.css
+++ b/src/type.css
@@ -29,9 +29,9 @@ strong {
 
 blockquote {
   font-size: 120%;
-  border-left: solid var(--box-000) var(--component-border-color);
-  padding: var(--box-1) var(--box-1) var(--box-1) var(--box-2);
-  margin-bottom: var(--box-3);
+  border-left: solid var(--gap-3) var(--component-border-color);
+  padding: var(--gap-5) var(--gap-5) var(--gap-5) var(--space-1);
+  margin-bottom: var(--space-2);
   margin-left: 0;
 }
 
@@ -123,7 +123,7 @@ mark {
 
 p {
   margin-top: 0;
-  margin-bottom: var(--box-3);
+  margin-bottom: var(--space-2);
 }
 
 pre {
